{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 157,
  "lineage": "8ccfcf34-d509-7d7f-d717-7ca761943e2d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003cfd6412d0510bf",
            "domain": "vpc",
            "id": "eipalloc-003cfd6412d0510bf",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-35-156-54-86.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.156.54.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-ter",
            "module.vpc.aws_vpc.vpc-ter"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-ter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:166402500790:internet-gateway/igw-04e67e07a5fae250c",
            "id": "igw-04e67e07a5fae250c",
            "owner_id": "166402500790",
            "vpc_id": "vpc-0188ef701ddcd22aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-ter"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-tbl-priv-ter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-tbl-publ-ter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:166402500790:route-table/rtb-08b7ff64cb26bd33e",
            "id": "rtb-08b7ff64cb26bd33e",
            "owner_id": "166402500790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e67e07a5fae250c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-tbl-publ-ter"
            },
            "tags_all": {
              "Name": "route-tbl-publ-ter"
            },
            "timeouts": null,
            "vpc_id": "vpc-0188ef701ddcd22aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-ter",
            "module.vpc.aws_vpc.vpc-ter"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publ-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-ter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:166402500790:vpc/vpc-0188ef701ddcd22aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00187b95ec80196c3",
            "default_route_table_id": "rtb-0f5da64b625c3a8a1",
            "default_security_group_id": "sg-072f3444c43c800b0",
            "dhcp_options_id": "dopt-0a6bd4e46850ff1a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0188ef701ddcd22aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5da64b625c3a8a1",
            "owner_id": "166402500790",
            "tags": {
              "Name": "vpc-ter"
            },
            "tags_all": {
              "Name": "vpc-ter"
            }
          }
        }
      ]
    }
  ]
}